        Reviewed by Eric.

https://bugs.webkit.org/show_bug.cgi?id=18568
        background: currentColor fails

        Implement currentColor from CSS3 color module.

        Tests: fast/css/background-currentcolor.html



Canonical link: https://commits.webkit.org/26071@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@32836 268f45cc-cd09-0410-ab3c-d52691b4dbfc